--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,59 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+/* Vone Landing Page Styles start */
+.benefits{
+    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)), url('/vone-images/benifits-bg.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.grid-item{
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 7px 10px 15px 0px rgb(0 0 0 / 0.3);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.vone-bg{
+  background: linear-gradient(90deg, #d400ff42 0%, #31c5ff3b 100%) , url('/vone-images/poppo-bg.webp');
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* About Section */
+#about{
+    background: url('/vone-images/about-bg.webp'), #FAFAFA;
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.register{
+    background: url('/vone-images/host-reg-bg.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
+.coin-trading-gradient{
+  background: rgb(148,18,255);
+  background: linear-gradient(180deg, rgba(148,18,255,1) 0%, rgba(76,183,255,1) 80%);
+}
+
+.gradient-hr{
+  background: linear-gradient(90deg, transparent 0%, rgb(255, 255, 255) 100%);
+  height: 1px;
+  border: none;
+}
+.reverse-gradient-hr{
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, transparent 100%);
+  height: 1px;
+  border: none;
+}
+/* Vone Landing Page Styles end */
+
+/* Vone Connect With Vone Page Styles start */
+/* Vone Connect With Vone Page Styles end */
