updated sizes for feature images on vone page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,22 @@
 @import "tailwindcss";
 
+/* Button component styles start */
+.btn-hover:hover {
+  background-position: 0% 100%;
+  /* moz-transition: all 0.4s ease-in-out; */
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
 
-
+.btn-hover {
+  background-image: linear-gradient(to bottom, #353D76, #505CB2, #6372DC);
+  background-size: 100% 300%;
+    -o-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+/* Button component styles end */
 /* Vone Landing Page Styles start */
 .benefits{
     background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)), url('/vone-images/benifits-bg.webp');
