--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,3 +82,169 @@
   background-repeat: no-repeat;
 }
 /* About Us Page Styles end */
+
+
+/* Blog Page Styles start */
+#blog-container h1{
+  font-weight: 600;
+  font-size: 2.5rem;
+  text-decoration: underline;
+  line-height: 1.35;
+}
+
+#blog-container h2{
+  color: #000000;
+  font-size: 1.75rem;
+  font-weight: 600;
+  margin: 1.5rem 0 0.5rem 0;
+  line-height: 1.3;
+  /* text-decoration: underline; */
+}
+
+#blog-container h3{
+  color: #000000;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 0.75rem 0 0.25rem 0;
+}
+
+#blog-container h4{
+  color: #000000;
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin: 0.25rem 0 0.25rem 0;
+}
+
+
+#blog-container p,li{
+  color: #000000dd;
+  font-size: 1.15rem;
+  line-height: 1.4;
+}
+#blog-container li{
+  margin-bottom: 2px;
+}
+
+#blog-container button{
+  background: transparent;
+  color: #ffffff;
+  padding: 0.5rem 1.5rem;
+  border-radius: 50px;
+  font-weight: 600;
+  font-size: 1rem;
+  /* border: 2px solid #353D76; */
+  margin: 1rem 0 0 0;
+  background-image: linear-gradient(to bottom, #353D76, #505CB2, #6372DC);
+  background-size: 100% 300%;
+    -o-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+#blog-container button:hover {
+  background-position: 0% 100%;
+  /* moz-transition: all 0.4s ease-in-out; */
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+#blog-container button a {
+  color: #ffffff;
+  text-decoration: none;
+}
+/* This makes the <a> inside the button change color when the button is hovered */
+#blog-container button:hover a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+#blog-container img{
+  max-width: 25rem;
+  margin: 2rem auto;
+}
+#blog-container img[alt*="table"]{
+  width: 100%;
+  max-width: 35rem;
+  margin: 1rem auto;
+}
+#blog-container img[alt*="Table1"]{
+  width: 100%;
+  max-width: 45rem;
+  margin: 1rem auto;
+}
+#blog-container a{
+  color: #353D76;
+  transition: all 0.3s;
+}
+#blog-container a:hover{
+  color: #505CB2;
+  text-decoration: underline;
+}
+#blog-container ol{
+  list-style-type: decimal;
+  padding-left: 1.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+#blog-container ul{
+  list-style-type: disc;
+  padding-left: 1.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+#blog-container li{
+  margin-bottom: 0.25rem;
+}
+
+/* Override for modal images - allow them to be larger */
+#modal img {
+  max-width: none !important;
+  margin: 0 !important;
+  width: 100% !important;
+  height: auto !important;
+}
+
+@media only screen and (max-width: 600px) {
+  #blog-container h1{
+    font-size: 24px;
+    font-weight: 600;
+}
+#blog-container h2{
+    font-size: 25px;
+    margin: 1rem 0 0.5rem 0;
+}
+#blog-container h3{
+    font-size: 22px;
+    font-weight: 600;
+    margin: 0.75rem 0 0.35rem 0;
+    line-height: 1.25;
+}
+#blog-container h4{
+    font-size: 18px;
+    margin: 0.65rem 0 0.35rem 0;
+}
+#blog-container img{
+    width: 100%;
+    max-width: 25rem;
+    margin: 1rem auto;
+}
+#blog-container p,li{
+  color: #000000dd;
+  font-size: 1rem;
+  line-height: 1.4;
+}
+#blog-container ol{
+    list-style-type: decimal;
+    padding-left: 1.25rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+#blog-container ul{
+    list-style-type: disc;
+    padding-left: 1.25rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+#blog-container li{
+    margin-bottom: 0.25rem;
+}
+}
