updated testiminial images

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+
+.no-scroll {
+  overflow: hidden;
+}
+
 /* Scrollbar styles start */
 ::-webkit-scrollbar {
   width: 0px;
